[tool.poetry]
name = "pong_rl_agent"
version = "0.1.0"
description = "An AI agent that learns to play Pong against humans using reinforcement learning."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
torch = "^2.5.1"
numpy = "^2.1.3"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
